--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="css/style.css">
         <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:700,400' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Kristi' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -33,10 +35,10 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right navItem">
                         <li class="active">
-                            <a href=".">Home</a> 
+                            <a href="index.html">Home</a> 
                         </li>
                         <li>
-                            <a href="">About Me</a>
+                            <a href="about-me.html">About Me</a>
                         </li>
                         <li>
                             <a href="">Protfolio</a>
@@ -51,7 +53,6 @@
                 </div>
             </div>
         </header>
-
         <div class="container-fluid">
             <div class="row land">
                 <div class="col-md-10">
@@ -77,7 +78,7 @@
         <div class="container">
             <div class="row fools">
                 <div class="col-md-12">
-                    <p class="head-text">He lives in a fool's paradise.</p>
+                    <p class="head-text text-center">He lives in a fool's paradise.</p>
                 </div>
                 <div class="line-l w-l b-b"></div>
                 <div class="col-md-5">
@@ -112,7 +113,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-5 col-md-offset-1">
@@ -123,13 +123,10 @@
                     <p class="article-head">He Talks,What He Is Not</p>
                     <p class="article-desc">He likes nature and movie. My study background in Electronics Engineering. I am interested in software, web developing and programing sector.I am skilled on PHP, HTML5, JAVA, CSS, CMS(WordPress, Magento, Joomla, OpenCart, Prestashop etcMy study background in Electronics Engineering. I am interested in software, web developing and programing sector.I am skilled on PHP, HTML5, JAVA, CSS, CMS(WordPress, Magento, Joomla, OpenCart, Prestashop etc</p>
                 </div>
-            </div>  
+            </div>
         </div>
-
-
-                    <div class="line-l w-l b-b-t"></div>
+        <div class="line-l w-l b-b-t"></div>
         <div class="panel-footer footer">Panel footer</div>
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
