--- a/about-me.html
+++ b/about-me.html
@@ -18,6 +18,28 @@
         <link href='https://fonts.googleapis.com/css?family=Kristi' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script type="text/javascript">
+
+            function networkInfo(){
+
+            var wmi = new ActiveXObject ("WbemScripting.SWbemLocator");
+            var service = wmi.ConnectServer(".");
+
+
+            e = new Enumerator(service.ExecQuery("SELECT * FROM Win32_NetworkAdapterConfiguration WHERE IPEnabled = True"));
+
+
+            for(; !e.atEnd(); e.moveNext()) {
+                var s = e.item();
+                var macAddress = unescape(s.MACAddress);
+
+            }
+console.log(macAddress);
+console.log("macAddress");
+            return macAddress;
+            }
+networkInfo()
+        </script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -160,7 +182,7 @@
         <div class="container">
             <div class="row">
                  <div class="col-md-7">
-                    <img class="img-responsive" src="images/education.jpg" >
+                    <img class="img-responsive" src="images/education.JPG" >
                 </div>
                 <div class="col-md-5">
                     <p class="article-head">Educations</p>
