--- a/about-me.html
+++ b/about-me.html
@@ -52,7 +52,7 @@
                             <a href="about-me.html">About Me</a>
                         </li>
                         <li>
-                            <a href="">Protfolio</a>
+                            <a href="protfolio.html">Protfolio</a>
                         </li>
                         <li>
                             <a href="">Contact</a>
@@ -310,7 +310,7 @@
         </div>
         <div class="height"></div>
     </div>
-        <div class="panel-footer footer">Panel footer</div>
+        <div class="panel-footer footer sticky-footer">© 2014 - 2016 Jakarea Parvez. All rights are reserved.</div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
