--- a/about-me.html
+++ b/about-me.html
@@ -52,13 +52,13 @@
                             <a href="about-me.html">About Me</a>
                         </li>
                         <li>
-                            <a href="protfolio.html">Protfolio</a>
+                            <a href="http://demo.jakarea.cf/">Protfolio</a>
                         </li>
                         <li>
-                            <a href="">Contact</a>
+                            <a href="http://demo.jakarea.cf/">Contact</a>
                         </li>
                         <li>
-                            <a href="">Blog</a>
+                            <a href="http://demo.jakarea.cf/">Blog</a>
                         </li>
                     </ul>
                 </div>
